# enpm663_summer2023

./: .gitignore  README.md
automated_vehicle/: CMakeLists.txt  package.xml
automated_vehicle/automated_vehicle/: automated_vehicle_interface.py
automated_vehicle/include/: camera.hpp  server.hpp
automated_vehicle/launch/: automated_vehicle.launch.py
automated_vehicle/nodes/: camera_exe.py  server_exe.py
automated_vehicle/src/: camera.cpp  server.cpp
competitor_demo/: CMakeLists.txt  package.xml
competitor_demo/config/: qos_profiles.yaml
competitor_demo/include/: listener_demo.hpp
competitor_demo/launch/: competitor_demo.launch.py
competitor_demo/src/: listener_demo.cpp  main.cpp
first_package/: CMakeLists.txt  package.xml
first_package/first_package/: first_package_interface.py
first_package/launch/: first_package_1.launch.py  first_package_2.launch.py
first_package/nodes/: advanced_publisher.py  subscriber.py
first_package/src/: subscriber.cpp
first_package_cpp/: CMakeLists.txt  package.xml
first_package_cpp/include/: advanced_publisher.hpp  simple_node.hpp  subscriber.hpp
first_package_cpp/src/: advanced_publisher.cpp  callback_example  callback_example.cpp  simple_node.cpp  subscriber.cpp
interface_demo/: CMakeLists.txt  package.xml
interface_demo/include/: message_demo.hpp  service_client_demo.hpp  service_server_demo.hpp
interface_demo/interface_demo/: interface_demo.py
interface_demo/nodes/: client_demo_exe.py  message_demo_exe.py  service_client_demo_exe.py
interface_demo/src/: message_demo.cpp  service_client_demo.cpp  service_server_demo.cpp
moveit_demo/: CMakeLists.txt  package.xml
moveit_demo/config/: floor_robot_targets.yaml  rwa67_summer2023.yaml
moveit_demo/documentation/: Doxyfile  aliases.txt
moveit_demo/documentation/html/: ____init_____8py.html  ____init_____8py_source.html  _c_make_lists_8txt.html  annotated.html  class_floor_robot-members.html  class_floor_robot.html  class_floor_robot__coll__graph.map  class_floor_robot__coll__graph.md5  class_floor_robot_a023ad759eba8983868b26ea357aff142_icgraph.map  class_floor_robot_a023ad759eba8983868b26ea357aff142_icgraph.md5  class_floor_robot_a064378575fd6cedf1db2d0b428eb2cca_cgraph.map  class_floor_robot_a064378575fd6cedf1db2d0b428eb2cca_cgraph.md5  class_floor_robot_a064378575fd6cedf1db2d0b428eb2cca_icgraph.map  class_floor_robot_a064378575fd6cedf1db2d0b428eb2cca_icgraph.md5  class_floor_robot_a067e072496ebcf80d617b8430cfe2d92_icgraph.map  class_floor_robot_a067e072496ebcf80d617b8430cfe2d92_icgraph.md5  class_floor_robot_a2733899f01e1a35dd0779254244f8509_cgraph.map  class_floor_robot_a2733899f01e1a35dd0779254244f8509_cgraph.md5  class_floor_robot_a2733899f01e1a35dd0779254244f8509_icgraph.map  class_floor_robot_a2733899f01e1a35dd0779254244f8509_icgraph.md5  class_floor_robot_a33c8a2b4c2915aab9a7b997a277c2593_cgraph.map  class_floor_robot_a33c8a2b4c2915aab9a7b997a277c2593_cgraph.md5  class_floor_robot_a33c8a2b4c2915aab9a7b997a277c2593_icgraph.map  class_floor_robot_a33c8a2b4c2915aab9a7b997a277c2593_icgraph.md5  class_floor_robot_a39d336dc70d1e0955474cb7445f36afd_cgraph.map  class_floor_robot_a39d336dc70d1e0955474cb7445f36afd_cgraph.md5  class_floor_robot_a39d336dc70d1e0955474cb7445f36afd_icgraph.map  class_floor_robot_a39d336dc70d1e0955474cb7445f36afd_icgraph.md5  class_floor_robot_a3bc41e80701582b2956fa68bd1862cc4_cgraph.map  class_floor_robot_a3bc41e80701582b2956fa68bd1862cc4_cgraph.md5  class_floor_robot_a3bc41e80701582b2956fa68bd1862cc4_icgraph.map  class_floor_robot_a3bc41e80701582b2956fa68bd1862cc4_icgraph.md5  class_floor_robot_a3ea9d7036a2181152ebe31ec6a53b918_cgraph.map  class_floor_robot_a3ea9d7036a2181152ebe31ec6a53b918_cgraph.md5  class_floor_robot_a3ea9d7036a2181152ebe31ec6a53b918_icgraph.map  class_floor_robot_a3ea9d7036a2181152ebe31ec6a53b918_icgraph.md5  class_floor_robot_a42e5796adbbbc5685908212e4b49c9f6_icgraph.map  class_floor_robot_a42e5796adbbbc5685908212e4b49c9f6_icgraph.md5  class_floor_robot_a50263dd91766390cff4ec813634b5406_cgraph.map  class_floor_robot_a50263dd91766390cff4ec813634b5406_cgraph.md5  (+103 more)
moveit_demo/include/: floor_robot.hpp  utils.hpp
moveit_demo/launch/: moveit_demo.launch.py
moveit_demo/moveit_demo/: floor_robot_commander.py
moveit_demo/nodes/: commander_main.py
moveit_demo/src/: floor_robot.cpp  main.cpp
parameter_demo/: CMakeLists.txt  package.xml
parameter_demo/config/: params.yaml
parameter_demo/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
parameter_demo/config/log/: latest_build
parameter_demo/include/: parameter_demo.hpp
parameter_demo/launch/: parameter_demo.launch.py
parameter_demo/nodes/: parameter_demo_exe.py
parameter_demo/parameter_demo/: parameter_demo_interface.py
parameter_demo/src/: parameter_demo.cpp
plansys_demo/plansys2_ariac_terminal/: CMakeLists.txt  package.xml
plansys_demo/plansys2_ariac_terminal/launch/: plansys2_ariac.launch.py
plansys_demo/plansys2_ariac_terminal/pddl/: durative_kitting_domain.pddl  durative_kitting_problem.pddl
plansys_demo/plansys2_ariac_terminal/src/: change_to_part_gripper_action_node.cpp  change_to_tray_gripper_action_node.cpp  pickup_tray_action_node.cpp  putdown_part_action_node.cpp  putdown_tray_action_node.cpp  start_competition_action_node.cpp
plansys_demo/plansys2_block/: CMakeLists.txt  package.xml
plansys_demo/plansys2_block/launch/: plansys2_block.launch.py
plansys_demo/plansys2_block/pddl/: block_problem.pddl  durative_block_domain.pddl  (+1 more)
qos_demo/: CMakeLists.txt  package.xml
qos_demo/include/: qos_publisher.hpp  qos_subscriber.hpp
qos_demo/launch/: qos_demo.launch.py
qos_demo/src/: qos_publisher.cpp  qos_subscriber.cpp
robot_commander_msgs/: CMakeLists.txt  package.xml
robot_commander_msgs/srv/: ExitToolChanger.srv  MoveRobotToTable.srv  MoveRobotToTray.srv  MoveTrayToAGV.srv
simple_demo/: CMakeLists.txt  package.xml
simple_demo/include/: simple_publisher.hpp  simple_subscriber.hpp
simple_demo/launch/: simple_demo.launch.py
simple_demo/src/: simple_publisher.cpp  simple_subscriber.cpp
(+106 files in other folders)
